# matrix_lib

./: CMakeLists.txt  README.md  config.ini
inc/: ConfigReader.h  LibSetup.h  Matrix.h
python/: MyMatrix.py
src/: ConfigReader.cpp  LibSetup.cpp  Matrix.cpp  main.cpp
swig/: Matrix.i
